fix: removing align items from container

--- a/src/components/Container/styles.module.scss
+++ b/src/components/Container/styles.module.scss
@@ -1,7 +1,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   min-height: 100vh;
   height: 100%;
   width: 100%;
